# tcmg

./: .gitignore  Makefile  README.md  build.bat  build.sh  config.cfg  globals.h  module-cccam.c  module-cccam.h  module-newcamd.c  module-newcamd.h  tcmg-ban.c  tcmg-client.c  tcmg-client.h  tcmg-conf.c  tcmg-conf.h  tcmg-emu.c  tcmg-failban.c  tcmg-globals.c  tcmg-globals.h  tcmg-log.c  tcmg-log.h  tcmg-main.c  tcmg-net.c  tcmg-net.h  tcmg-platform.c  tcmg-platform.h  tcmg-srvid.c  tcmg-srvid2.c  tcmg-srvid2.h  tcmg-webif.c  tcmg.c  tcmg.srvid2
.github/workflows/: build.yml
android/: gradlew  gradlew.bat
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/java/com/tcmg/app/: BootReceiver.java  ControlFragment.java  EditorFragment.java  LogFragment.java  MainActivity.java  TcmgNative.java  TcmgService.java
android/app/src/main/jni/: CMakeLists.txt  tcmg_android_compat.h  tcmg_jni_bridge.c
android/app/src/main/res/color/: btn_start_tint.xml  btn_stop_tint.xml
android/app/src/main/res/drawable/: bg_badge_blue.xml  bg_badge_green.xml  bg_badge_orange.xml  bg_badge_red.xml  bg_card_running.xml  bg_card_stopped.xml  bg_code_editor.xml  bg_live_badge.xml  bg_surface_rounded.xml  bg_surface_rounded_ember.xml  bg_theme_active.xml  bg_theme_pill.xml  bg_theme_pill_ember.xml  bg_unsaved_dot.xml  bg_version_badge.xml  ic_btn_stop.xml  ic_close.xml  ic_file.xml  ic_nav_control.xml  ic_pause.xml  ic_reload.xml  ic_save.xml  ic_scroll_down.xml  ic_search.xml  ic_stat_check.xml  ic_stat_clock.xml  ic_stat_percent.xml  ic_stat_shield.xml  ic_stat_users.xml  ic_stat_x.xml  ic_warn.xml  status_dot.xml  status_dot_running.xml  status_dot_stopped.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_control.xml  fragment_editor.xml  fragment_log.xml
android/app/src/main/res/layout-land/: activity_main.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cscrypt/: crypto.c  crypto.h
src/: client.c  client.h  globals.c  main.c  tcmg-ban.c  tcmg-conf.c  tcmg-crypto.c  tcmg-emu.c  tcmg-emu.h  tcmg-globals.h  tcmg-log.c  tcmg-log.h  tcmg-net.c  tcmg-net.h  tcmg-platform.h  tcmg-srvid2.c  tcmg-srvid2.h  tcmg-webif-common.c  tcmg-webif-internal.h  tcmg-webif-layout.c  tcmg-webif-pages.c  tcmg-webif-tvcas.c  tcmg-webif.c  tcmg-webif.h  tcmg.c  tcmg.h  tcmg_compat.h  tcmg_globals.h  tcmg_helpers.h  tcmg_types.h
src/cache/: cw_cache.c  cw_cache.h
src/client/: client.c  client.h
src/config/: config.c  config.h
src/core/: ban.c  ban.h  compat.h  conf.c  conf.h  constants.h  emu.c  emu.h  globals.c  log.c  log.h  srvid.c  srvid.h  types.h  utils.h
src/crypto/: crypto.c  crypto.h  sha1.c
src/emu/: emu.c  emu.h
src/log/: log.c  log.h
src/net/: net.c  net.h
src/platform/: platform.c  platform.h
src/proto/: cccam.c  cccam.h  newcamd.c  newcamd.h
src/security/: failban.c  failban.h
src/srvid/: srvid.c  srvid.h
src/webif/: webif.c  webif.h  webif_api.c  webif_common.c  webif_internal.h  webif_layout.c  webif_page_login.c  webif_page_status.c  webif_page_system.c  webif_page_users.c  webif_tvcas.c
src/webif/assets/: tcmg.css  tcmg.js
tcmg_apk/: .gitignore  build.bat  gradlew  settings.gradle
tcmg_apk/app/: build.gradle
tcmg_apk/app/src/main/: AndroidManifest.xml
tcmg_apk/app/src/main/java/com/tcmg/app/: BootReceiver.java  ControlFragment.java  EditorFragment.java  LogFragment.java  MainActivity.java  TcmgService.java
tcmg_apk/app/src/main/jni/: CMakeLists.txt  tcmg_jni_bridge.c
tcmg_apk/app/src/main/jni/tcmg/: tcmg-ban.c  tcmg-ban.h  tcmg-crypto.c  tcmg-crypto.h  tcmg-emu.c  tcmg-log.c  tcmg-net.c  tcmg-net.h  tcmg-srvid2.c  tcmg-webif.c
tcmg_apk/app/src/main/res/color/: nav_item_color.xml
tcmg_apk/app/src/main/res/drawable/: bg_card_running.xml  bg_card_stopped.xml  bg_card_stopped_ember.xml  bg_code_editor_ember.xml  bg_surface_rounded.xml  bg_theme_active_ember.xml  ic_nav_editor.xml  ic_nav_log.xml  status_dot.xml  status_dot_running.xml
tcmg_apk/app/src/main/res/layout/: activity_main.xml  fragment_editor.xml
tcmg_apk/app/src/main/res/values/: colors.xml  dimens.xml  themes.xml
tcmg_apk/app/src/main/res/values-sw600dp/: dimens.xml
tcmg_apk/app/src/main/res/values-sw900dp/: dimens.xml
tcmg_apk/gradle/wrapper/: gradle-wrapper.properties
tools/: gen_assets.py
webif/: core.c  icons.h  layout.c  server.c  server.h  stats.c  webif-api.c  webif-common.c  webif-internal.h  webif-layout.c  webif-page-login.c  webif-page-status.c  webif-page-system.c  webif-page-users.c  webif-tvcas.c  webif.c  webif.h
webif/api/: config.c  status.c  system.c  users.c
webif/assets/: tcmg.css  tcmg.js
webif/http/: auth.c  request.c  response.c
webif/internal/: constants.h  macros.h  proto.h  types.h
webif/pages/: config.c  files.c  login.c  power.c  status.c  system.c  tvcas.c  users.c
